--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "github-deploy": "npm run github-deploy:dev",
     "lint": "npm run tslint \"src/**/*.ts\"",
     "node": "node",
-    "postinstall": "npm run webdriver:update",
+    "postinstall": "ng build --aot -prod",
     "postversion": "git push && git push --tags",
     "preclean:install": "npm run clean",
     "preversion": "npm test",
@@ -64,7 +64,7 @@
     "server": "npm run server:dev",
     "start:prod:hmr": "cross-env ANGULAR_CONF_FILE=./config.prod.json npm run server:dev:hmr",
     "start:hmr": "npm run server:dev:hmr",
-    "start": "npm run server:dev",
+    "start": "node server.js",
     "start:aot": "npm run server:aot:dev",
     "test": "npm run lint && karma start",
     "test:sonar": "npm run lint && cross-env SONAR_QUBE=1 karma start",
@@ -99,9 +99,11 @@
     "@google/maps": "^0.4.6",
     "angular2-useful-swiper": "^5.0.1",
     "core-js": "^2.5.5",
+    "express": "^4.16.3",
     "http-server": "^0.11.1",
     "ie-shim": "^0.1.0",
     "ngx-pagination": "^3.2.0",
+    "path": "^0.12.7",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.10",
     "zone.js": "^0.8.26"
@@ -180,7 +182,7 @@
     "url": "https://github.com/gdi2290/angular-starter/issues"
   },
   "engines": {
-    "node": ">= 8.0.0",
-    "npm": ">= 5"
+    "node": "6.11.0",
+    "npm": "3.10.10"
   }
 }
