--- a/package.json
+++ b/package.json
@@ -165,7 +165,7 @@
     "tslint": "^5.9.1",
     "tslint-loader": "^3.5.3",
     "typedoc": "^0.11.1",
-    "typescript": "~2.7.2",
+    "typescript": "2.7.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
     "webpack": "^3.10.0",
