--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "github-deploy": "npm run github-deploy:dev",
     "lint": "npm run tslint \"src/**/*.ts\"",
     "node": "node",
-    "postinstall": "ng build --aot -prod",
+    "postinstall": "npm run build:aot:prod",
     "postversion": "git push && git push --tags",
     "preclean:install": "npm run clean",
     "preversion": "npm test",
